Arquillian integration tests